Set up CI with Azure Pipelines
[skip ci]

--- a/deploy/infrastructure-pipeline.yml
+++ b/deploy/infrastructure-pipeline.yml
@@ -1,7 +1,7 @@
 trigger:
   branches:
     include:
-    - develop
+    - main
   paths:
     include:
     - 'deploy/main.bicep'
@@ -33,8 +33,7 @@ steps:
       scriptType: 'bash'
       scriptLocation: 'inlineScript'
       inlineScript: |
-        az deployment group validate --debug
-\
+        az deployment group validate --debug \
           --resource-group '$(ResourceGroupName)' \
           --template-file deploy/main.bicep \
           --parameters environmentName=${{parameters.environmentType}} \
