--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "@mui/icons-material": "^7.3.3",
     "@mui/material": "^7.3.3",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-ga4": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
